--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     tools:context=".Fragments.HomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:backgroundTint="@color/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -68,15 +69,32 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/randomMealCard"
-            android:backgroundTint="@color/accentColor"
+            app:cardElevation="@dimen/_3sdp"
+            android:backgroundTint="@color/background"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_150sdp"
+            android:layout_height="@dimen/_190sdp"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintStart_toStartOf="@id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@id/discoverTextView"
             app:cardUseCompatPadding="true"
             app:cardCornerRadius="@dimen/_3sdp"
-            android:layout_marginTop="@dimen/_5sdp"/>
+            android:layout_marginTop="@dimen/_5sdp">
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_gravity="center"
+                android:id="@+id/lottieAnimationView"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                app:lottie_rawRes="@raw/loading"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true" />
+
+            <ImageView
+                android:id="@+id/randomMealImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"/>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_marginTop="@dimen/_5sdp"
