--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,7 +66,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent=".91" />
-
         <androidx.cardview.widget.CardView
             android:id="@+id/randomMealCard"
             app:cardElevation="@dimen/_3sdp"
@@ -80,21 +79,48 @@
             app:cardCornerRadius="@dimen/_3sdp"
             android:layout_marginTop="@dimen/_5sdp">
 
-            <com.airbnb.lottie.LottieAnimationView
-                android:layout_gravity="center"
-                android:id="@+id/lottieAnimationView"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                app:lottie_rawRes="@raw/loading"
-                app:lottie_autoPlay="true"
-                app:lottie_loop="true" />
-
-            <ImageView
-                android:id="@+id/randomMealImageView"
+            <!-- FrameLayout to overlay TextView on top of the ImageView -->
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
+                android:layout_height="match_parent">
+
+                <!-- ImageView to display the image -->
+                <ImageView
+                    android:id="@+id/randomMealImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"/>
+
+                <!-- Lottie Animation for loading indication -->
+                <com.airbnb.lottie.LottieAnimationView
+                    android:layout_gravity="center"
+                    android:id="@+id/lottieAnimationView"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    app:lottie_rawRes="@raw/loading"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true" />
+
+                <!-- TextView for meal name, displayed on top of the ImageView -->
+                <TextView
+                    android:id="@+id/randomText"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center"
+                    android:background="@drawable/semi_transparent_bg"
+                    android:text="Random Meal Name"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/_15ssp"
+                    android:textStyle="bold"
+                    android:padding="8dp"/>
+
+            </FrameLayout>
         </androidx.cardview.widget.CardView>
+
+
+
+
 
         <TextView
             android:layout_marginTop="@dimen/_5sdp"
