--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -15,7 +15,8 @@
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbar"
-
+            app:titleEnabled="true"
+            app:collapsedTitleTextColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentScrim="@color/primaryColor"
@@ -24,7 +25,7 @@
              <ImageView
                  android:id="@+id/toolbarImg"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="@dimen/_250sdp"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
@@ -37,18 +38,58 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
+    
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/linearProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:indeterminate="true"
+        app:layout_anchor="@id/appBarLayout"
+        app:layout_anchorGravity="bottom"
+        android:visibility="gone"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_favourite"
+        app:backgroundTint="@color/primaryColor"
+        app:layout_anchor="@id/appBarLayout"
+        app:layout_anchorGravity="bottom|end"
+        android:tint="@color/white"
+        android:layout_marginEnd="@dimen/_10sdp" />
 
     <androidx.core.widget.NestedScrollView
+        android:backgroundTint="@color/background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <TextView
-            android:id="@+id/mealDetails"
+        <LinearLayout
+            android:layout_marginTop="@dimen/_10sdp"
+            android:padding="@dimen/_10sdp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lineSpacingExtra="@dimen/_8ssp"
-            android:padding="@dimen/_16sdp"
-            android:textSize="@dimen/_12sdp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:id="@+id/instructionsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="monospace"
+                android:text="Instructions"
+                android:textColor="@color/textColorPrimary"
+                android:textSize="@dimen/_15ssp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/mealDetails"
+                android:textColor="@color/textColorSecondary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lineSpacingExtra="@dimen/_8ssp"
+                android:textSize="@dimen/_12sdp" />
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
