--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.HomeFragment">
 
+<androidx.core.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:backgroundTint="@color/background"
         android:layout_width="match_parent"
@@ -170,8 +173,8 @@
             >
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/categoryRecyclerView"
-                android:layout_width="@dimen/_70sdp"
-                android:layout_height="@dimen/_70sdp"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -179,4 +182,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+</androidx.core.widget.NestedScrollView>
 </FrameLayout>
