--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/_90sdp"
-    android:layout_height="@dimen/_90sdp"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/_120sdp"
     android:layout_marginEnd="@dimen/_10sdp"
     app:cardUseCompatPadding="true"
-    app:cardCornerRadius="@dimen/_2sdp"
-    app:cardElevation="@dimen/_2sdp"
+    app:cardCornerRadius="@dimen/_10sdp"
+    app:cardElevation="@dimen/_5sdp"
     android:backgroundTint="@android:color/white">
 
     <!-- Container to overlay text on image or position it at the bottom -->
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,21 +20,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitCenter"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <!-- Text View for category name -->
         <TextView
             android:id="@+id/categoryTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_alignParentBottom="true"
             android:padding="@dimen/_4sdp"
             android:background="#80000000"
             android:textColor="@android:color/white"
             android:textSize="12sp"
             android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/categoryImageView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:text="Category Name" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
