--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -25,6 +25,7 @@
              <ImageView
                  android:id="@+id/toolbarImg"
                 android:layout_width="match_parent"
+                 android:layout_alignParentTop="true"
                 android:layout_height="@dimen/_250sdp"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
@@ -50,14 +51,14 @@
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        app:fabSize="normal"
         android:id="@+id/btn_favourite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_favourite"
+        android:src="@drawable/ic_full_heart"
         app:backgroundTint="@color/primaryColor"
         app:layout_anchor="@id/appBarLayout"
         app:layout_anchorGravity="bottom|end"
-        android:tint="@color/white"
         android:layout_marginEnd="@dimen/_10sdp" />
 
     <androidx.core.widget.NestedScrollView
@@ -130,15 +131,19 @@
     </androidx.core.widget.NestedScrollView>
 
     <ImageView
-        android:elevation="@dimen/_3sdp"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_gravity="bottom|end"
         android:id="@+id/btn_yt"
-        android:layout_width="@dimen/_40sdp"
-        android:layout_height="@dimen/_40sdp"
-        android:src="@drawable/ic_btn_youtube"
+        android:layout_width="@dimen/_45sdp"
+        android:layout_height="@dimen/_45sdp"
+        android:src="@drawable/ic_youtube"
         android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_20sdp"
+        android:elevation="@dimen/_10sdp"
+        android:translationZ="@dimen/_6sdp"
         />
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
