--- a/app/src/main/res/layout/fragment_fav.xml
+++ b/app/src/main/res/layout/fragment_fav.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Total Favourites: "
+            android:text="Total Favourites: 0"
             android:textColor="@color/primaryColor"
             android:textStyle="bold"
             android:textSize="@dimen/_15ssp"
