--- a/app/src/main/res/layout/fragment_cat.xml
+++ b/app/src/main/res/layout/fragment_cat.xml
@@ -3,12 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.CatFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Cat" />
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+      <TextView
+          android:layout_marginLeft="@dimen/_10sdp"
+          android:layout_marginTop="@dimen/_8sdp"
+          android:id="@+id/categoryTextView"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:fontFamily="monospace"
+          android:text="Browse by Category"
+          android:textColor="@color/primaryColor"
+          android:textSize="@dimen/_15ssp"
+          android:textStyle="bold"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toTopOf="parent"/>
+
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_marginTop="@dimen/_5sdp"
+          android:id="@+id/categoryRecyclerView"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/categoryTextView"/>
+  </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
